addes strings text back in

--- a/include/benchmark_signals.tex
+++ b/include/benchmark_signals.tex
@@ -257,206 +257,205 @@ is described in Ref.~\cite{Marshall:2016630}.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \clearpage
-% \subsubsection{Quantum black holes in the horizon quantum mechanics model}
 %
-%The quadratically divergent corrections to the Higgs self-energy is a
-%well known problem of the Standard Model.
-%Supersymmetry offers a solution to this problem by fine-tuning the
-%cancellation. 
-%Alternatively, in low-scale string theory quadratic divergences are 
-%cutoff by the string mass scale, thus avoiding the fine-tuning problem.
-%In addition, superstring theory can act as a unifying framework between
-%TeV-scale Standard Model physics and Planck-scale quantum gravity.  
-%
-%Superstring theory provides a braneworld description of the Standard
-%Model, which is localized on membranes extending in $p+3$ spatial
-%dimension, the so-called D-branes of dimension $p$: D$p$-branes.
-%D-branes can thus be used to connect string theory to
-%phenomenology~\cite{Antoniadis:2000ena,Cremades:2002qm,Antoniadis:2002qm}
-%Gauge bosons are due to strings attached to stacks of D-branes, and
-%chiral matter is due to strings stretching between intersecting D-branes.
-%The gauge interactions emerge as excitations of open strings with endpoints
-%attached on the D-branes, whereas gravitational interaction are described
-%by closed strings that can propagate in all nine spatial dimensions of
-%superstring theory.
-%
-%We consider type-II string theory compactified on a six-dimensional
-%torus, which includes a D$p$-brane wrapped around $p-3$ dimensions of the
-%torus, with the remaining dimensions along our familiar (uncompactified)
-%three spatial dimensions.
-%
-%The string mass-scale \Ms can be chosen hierarchically smaller than the
-%four-dimensional Planck scale at the expense of introducing $9-p$ large
-%transverse dimensions felt only by gravity, while keeping the string
-%coupling small~\cite{Cullen:2000ef}.
-%We are interested in the fundamental string scale in the TeV range.
-%The weakness of the effective four-dimensional gravity compared to gauge
-%interactions is then attributed to the large transverse space radii
-%compared to the string length; the so called AADD
-%model~\cite{ArkaniHamed:1998rs,Antoniadis:1998ig}. 
-%
-%The string coupling must be small for the validity of the above D-brane
-%framework and of perturbation theory in the computation of scattering
-%amplitudes. 
-%If AADD is valid, string resonances will likely appear before gravity
-%signatures.
-%In this case, black hole production and other strong gravity effects
-%occur at energies above the string scale.
-%Thus, at least the lowest few Regge recurrences, are available for
-%examination, free from interference with some complex quantum
-%gravitational phenomena. 
-%The dominance of string resonances over Kaluza-Klein effects and winding
-%states is a generic feature of weakly coupled string
-%theory~\cite{Cullen:2000ef}. 
-%We do not considering the Kaluza-Klein states of the graviton in the
-%extra dimensions or the winding states.
-%
-%In this framework, a whole tower of infinite string excitations will
-%open up at this low-mass threshold, and new particles of spin $J$ will
-%follow the well-known Regge trajectories of vibrating
-%strings.  
-%The string mass scale determines the centre of mass energy threshold 
-%for the production of Regge resonances in parton collisions, thus
-%corresponds to the onset of string effects at the LHC.
-%
-%We consider dominant subprocesses in dijet production that are
-%independent of the details of compactification and are essentially
-%parameter free. 
-%Amplitudes, which include $2\to 2$ scattering processes involving four
-%gluons, or two gluons and two quarks, are independent of the details of
-%the compactification such as the configuration of branes, the geometry
-%of the extra dimensions, and whether SUSY is broken or
-%not~\cite{Lust:2008qc}. 
-%This model independence makes it possible to compute the string
-%corrections to QCD dijet processes.
-%
-%The string resonances occur at masses $m_n = \sqrt{n} \Ms$, for $n = 1,
-%2, 3, \ldots$.
-%We only consider the first $(n=1)$ resonant pole.
-%The resonance will consist of a combination of the Regge excitations of
-%the quark, the gluon, and the colour singlet living on the QCD stack of
-%branes. 
-%The string-resonance widths have been calculated in
-%Ref~\cite{Anchordoqui:2008hi}. 
-%
-%First phenomenological studies were done in
-%Ref~\cite{Anchordoqui:2007da,Anchordoqui:2009mm,Kitazawa:2010gh,Anchordoqui:2014wha}. 
-%Searches for string resonances have been performed in previous dijet
-%mass spectra.
-%ATLAS~\cite{ATLAS:2012pu} searched in 4.8~fb$^{-1}$ of data at $\sqrt{s}
-%= 7$~TeV.
-%A lower limit of $\Ms < 3.61$~TeV at a 95\% CL was set.
-%The MC signal samples were provided by a non-ATLAS member Noriaki
-%Kitazawa who used CalcHEP.
-%CMS~\cite{Chatrchyan:2011ns,CMS:2012yf} performed two searches in dijets
-%at $\sqrt{s} = 7$~TeV.
-%Lower limits of $\Ms < 4.00$~TeV and $\Ms < 4.31$~TeV were set at the
-%95\% CL using datasets of 1.0~fb$^{-1}$ and 5.0~fb$^{-1}$, respectively. 
-%It is not totally clear how this limit was set but the excited
-%quark MC sample was probably used for the signal event generation. 
-%A non-CMS member Can Kilic did the string resonance cross section
-%calculation. 
-%CMS~\cite{Khachatryan:2015sja} performed the only search at $\sqrt{s} =
-%8$~TeV using 19.7~fb$^{-1}$ of data, to obtain a lower limit of $\Ms <
-%5.0$~TeV at the 95\% CL.
-%The paper does not explanation of how this limit was calculated.
-%CMS~\cite{Khachatryan:2015dcf,Sirunyan:2018xlo} performed two searches
-%in dijets at $\sqrt{s} = 13$~TeV. 
-%Lower limits of $\Ms < 7.0$~TeV and $\Ms < 7.7$~TeV were set at the
-%95\% CL using datasets of 2.4~fb$^{-1}$ and 36~fb$^{-1}$, respectively. 
-%Again, no explanation of the signal samples are given and only the $gq$
-%state is considered.
-%Both experiments have performed searches for string balls in different
-%decay modes at $\sqrt{s} = 7, 8$, and 13~TeV, but we argue that the
-%model~\cite{Gingrich:2008di} used does not constrain string resonances,
-%or visa versa. 
+The quadratically divergent corrections to the Higgs self-energy is a
+well known problem of the Standard Model.
+Supersymmetry offers a solution to this problem by fine-tuning the
+cancellation. 
+Alternatively, in low-scale string theory quadratic divergences are 
+cutoff by the string mass scale, thus avoiding the fine-tuning problem.
+In addition, superstring theory can act as a unifying framework between
+TeV-scale Standard Model physics and Planck-scale quantum gravity.  
+
+Superstring theory provides a braneworld description of the Standard
+Model, which is localized on membranes extending in $p+3$ spatial
+dimension, the so-called D-branes of dimension $p$: D$p$-branes.
+D-branes can thus be used to connect string theory to
+phenomenology~\cite{Antoniadis:2000ena,Cremades:2002qm,Antoniadis:2002qm}.
+Gauge bosons are due to strings attached to stacks of D-branes, and
+chiral matter is due to strings stretching between intersecting D-branes.
+The gauge interactions emerge as excitations of open strings with endpoints
+attached on the D-branes, whereas gravitational interaction are described
+by closed strings that can propagate in all nine spatial dimensions of
+superstring theory.
+
+We consider type-II string theory compactified on a six-dimensional
+torus, which includes a D$p$-brane wrapped around $p-3$ dimensions of the
+torus, with the remaining dimensions along our familiar (uncompactified)
+three spatial dimensions.
+
+The string mass-scale \Ms can be chosen hierarchically smaller than the
+four-dimensional Planck scale at the expense of introducing $9-p$ large
+transverse dimensions felt only by gravity, while keeping the string
+coupling small~\cite{Cullen:2000ef}.
+We are interested in the fundamental string scale in the TeV range.
+The weakness of the effective four-dimensional gravity compared to gauge
+interactions is then attributed to the large transverse space radii
+compared to the string length; the so called AADD
+model~\cite{ArkaniHamed:1998rs,Antoniadis:1998ig}. 
+
+The string coupling must be small for the validity of the above D-brane
+framework and of perturbation theory in the computation of scattering
+amplitudes. 
+If AADD is valid, string resonances will likely appear before gravity
+signatures.
+In this case, black hole production and other strong gravity effects
+occur at energies above the string scale.
+Thus, at least the lowest few Regge recurrences, are available for
+examination, free from interference with some complex quantum
+gravitational phenomena. 
+The dominance of string resonances over Kaluza-Klein effects and winding
+states is a generic feature of weakly coupled string
+theory~\cite{Cullen:2000ef}. 
+We do not considering the Kaluza-Klein states of the graviton in the
+extra dimensions or the winding states.
+
+In this framework, a whole tower of infinite string excitations will
+open up at this low-mass threshold, and new particles of spin $J$ will
+follow the well-known Regge trajectories of vibrating
+strings.  
+The string mass scale determines the centre of mass energy threshold 
+for the production of Regge resonances in parton collisions, thus
+corresponds to the onset of string effects at the LHC.
+
+We consider dominant subprocesses in dijet production that are
+independent of the details of compactification and are essentially
+parameter free. 
+Amplitudes, which include $2\to 2$ scattering processes involving four
+gluons, or two gluons and two quarks, are independent of the details of
+the compactification such as the configuration of branes, the geometry
+of the extra dimensions, and whether SUSY is broken or
+not~\cite{Lust:2008qc}. 
+This model independence makes it possible to compute the string
+corrections to QCD dijet processes.
+
+The string resonances occur at masses $m_n = \sqrt{n} \Ms$, for $n = 1,
+2, 3, \ldots$.
+We only consider the first $(n=1)$ resonant pole.
+The resonance will consist of a combination of the Regge excitations of
+the quark, the gluon, and the colour singlet living on the QCD stack of
+branes. 
+The string-resonance widths have been calculated in
+Ref~\cite{Anchordoqui:2008hi}. 
+
+First phenomenological studies were done in
+Ref~\cite{Anchordoqui:2007da,Anchordoqui:2009mm,Kitazawa:2010gh,Anchordoqui:2014wha}. 
+Searches for string resonances have been performed in previous dijet
+mass spectra.
+ATLAS~\cite{ATLAS:2012pu} searched in 4.8~fb$^{-1}$ of data at $\sqrt{s}
+= 7$~TeV.
+A lower limit of $\Ms < 3.61$~TeV at a 95\% CL was set.
+The MC signal samples were provided by a non-ATLAS member Noriaki
+Kitazawa who used CalcHEP.
+CMS~\cite{Chatrchyan:2011ns,CMS:2012yf} performed two searches in dijets
+at $\sqrt{s} = 7$~TeV.
+Lower limits of $\Ms < 4.00$~TeV and $\Ms < 4.31$~TeV were set at the
+95\% CL using datasets of 1.0~fb$^{-1}$ and 5.0~fb$^{-1}$, respectively. 
+It is not totally clear how this limit was set but the excited
+quark MC sample was probably used for the signal event generation. 
+A non-CMS member Can Kilic did the string resonance cross section
+calculation. 
+CMS~\cite{Khachatryan:2015sja} performed the only search at $\sqrt{s} =
+8$~TeV using 19.7~fb$^{-1}$ of data, to obtain a lower limit of $\Ms <
+5.0$~TeV at the 95\% CL.
+The paper does not explanation of how this limit was calculated.
+CMS~\cite{Khachatryan:2015dcf,Sirunyan:2018xlo} performed two searches
+in dijets at $\sqrt{s} = 13$~TeV. 
+Lower limits of $\Ms < 7.0$~TeV and $\Ms < 7.7$~TeV were set at the
+95\% CL using datasets of 2.4~fb$^{-1}$ and 36~fb$^{-1}$, respectively. 
+Again, no explanation of the signal samples are given and only the $gq$
+state is considered.
+Both experiments have performed searches for string balls in different
+decay modes at $\sqrt{s} = 7, 8$, and 13~TeV, but we argue that the
+model~\cite{Gingrich:2008di} used does not constrain string resonances,
+or visa versa. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Five string-resonance samples with string scales \Ms from 7.0~TeV to
-%9.0~TeV, in steps of 0.5~TeV are generated.
-%The minimum mass $M_\mathrm{min}$ used in the generator and the
-%resulting cross section of the samples are shown in Table~\ref{tab1}. 
-%
-%\begin{table}[htb]
-%\begin{center}
-%\begin{tabular}{ccc}\hline\\[-2ex]
-%\Ms & $M_\mathrm{min}$ & Cross section\\
-%{[TeV]} & {[TeV]} & {[fb]}\\ \\[-2ex]
-%\hline\\[-2ex]
-%7.0 & 6.06 & $7.09\times 10^{+0}$\\
-%7.5 & 6.60 & $1.86\times 10^{+0}$\\
-%8.0 & 7.14 & $4.56\times 10^{-1}$\\
-%8.5 & 7.60 & $1.00\times 10^{-1}$\\
-%9.0 & 8.05 & $1.99\times 10^{-2}$\\
-%\\[-2ex]\hline
-%\end{tabular}
-%\end{center}
-%\caption{Monte Carlo string-resonance samples with string scale \Ms,
-%minimum mass $M_\mathrm{min}$, and cross section.} 
-%\label{tab1}
-%\end{table}
-%
-%The string resonances have long Breit-Wigner tails and the lower-mass
-%tail can be significantly enhanced by the PDFs at low-$x$ (low mass).
-%Since we are interested in a narrow-resonance structure in the dijet
-%mass distribution, we truncate the low-mass tail.
-%For the $7.0 \leq \Ms \leq 8.0$~TeV samples, we truncate at the minimum in
-%the differential cross section on the lower-mass side of the \Ms peak,
-%which results in including slightly more than 95\% of the area under the
-%curve. 
-%For the $8.5 \leq \Ms \leq 9.0$~TeV samples, we truncate at a lower-mass
-%value that covers 95\% of the area under the Breit-Wigner curve.
-%
-%Five possible $2\to 2$ subprocesses that can give rise to string
-%resonances are simulated.
-%The cross section for each subprocess is a function of \Ms, and thus the
-%relative contribution of each subprocess to the total cross section varies
-%with \Ms, as shown in Table~\ref{tab2}.
-%The dominate subprocess at the \Ms values we consider is $gq\to gq$ which
-%contributes about 81-87\% of the total cross section.
-%Previous ATLAS and CMS searches only included the dominate subprocess.
-%The $qq\to qq$, $\bar{q}\bar{q}\to \bar{q}\bar{q}$, and $q\bar{q}\to
-%q\bar{q}$ subprocesses are model dependent, and not
-%considered here.
-%
-%\begin{table}[htb]
-%\begin{center}
-%\begin{tabular}{crrrrr}\hline\\[-2ex]
-%Subprocess             & \multicolumn{5}{c}{\Ms\ {[TeV]}}\\
-%& \multicolumn{1}{c}{7.0} & \multicolumn{1}{c}{7.5} &
-%\multicolumn{1}{c}{8.0} & \multicolumn{1}{c}{8.5} &
-%\multicolumn{1}{c}{9.0}\\ \\[-2ex]
-%\hline\\[-2ex]
-%$gg\to gg$             & 11.36\% &  9.52\% &  8.17\% &  7.23\% &  5.07\%\\
-%$gg\to q\bar{q}$       &  0.29\% &  0.28\% &  0.22\% &  0.19\% &  0.17\%\\
-%$gq\to gq$             & 81.36\% & 83.12\% & 84.58\% & 85.54\% & 87.59\%\\
-%$g\bar{q}\to g\bar{q}$ &  0.68\% &  0.58\% &  0.52\% &  0.51\% &  0.49\%\\
-%$q\bar{q}\to gg$       &  6.31\% &  6.50\% &  6.51\% &  6.53\% &  6.67\%\\
-%\\[-2ex] \hline
-%\end{tabular}
-%\end{center}
-%\caption{String-resonance subprocesses and their relative contribution
-%to the total cross section for different string scales \Ms.
-%The statistics are based on samples of 66000 events.}
-%\label{tab2}
-%\end{table}
-%
-%For the string-resonance samples, the MC event
-%generator \str~1.00~\cite{Vakilipourtakalou:2018pfo} is used.
-%It is interfaced to \pythia~8.240~\cite{Sjostrand:2014zea} for modelling
-%of the parton shower, hadronization, and underlying event, with
-%parameters from the A14 tune~\cite{ATL-PHYS-PUB-2014-021}.
-%The leading-order CTEQ6L1~\cite{Pumplin:2002vw} PDF set is used for the
-%parton shower and the hard-scattering process.
-%The EvtGen~1.6.0 program~\cite{Lange:2001uf} is used to decay bottom
-%and charm hadrons. 
-%
-%The effect of multiple interactions in the same and neighbouring bunch
-%crossings (pile-up) is modelled by overlaying simulated inelastic $pp$
-%events generated with \pythia~8.186~\cite{Sjostrand:2014zea}
-%using NNPDF2.3LO set of PDFs~\cite{Ball:2012cx} and the A3
-%tune~\cite{ATL-PHYS-PUB-2016-017} over the original hard-scattering event. 
+Five string-resonance samples with string scales \Ms from 7.0~TeV to
+9.0~TeV, in steps of 0.5~TeV are generated.
+The minimum mass $M_\mathrm{min}$ used in the generator and the
+resulting cross section of the samples are shown in Table~\ref{tab1}. 
+
+\begin{table}[htb]
+\begin{center}
+\begin{tabular}{ccc}\hline\\[-2ex]
+\Ms & $M_\mathrm{min}$ & Cross section\\
+{[TeV]} & {[TeV]} & {[fb]}\\ \\[-2ex]
+\hline\\[-2ex]
+7.0 & 6.06 & $7.09\times 10^{+0}$\\
+7.5 & 6.60 & $1.86\times 10^{+0}$\\
+8.0 & 7.14 & $4.56\times 10^{-1}$\\
+8.5 & 7.60 & $1.00\times 10^{-1}$\\
+9.0 & 8.05 & $1.99\times 10^{-2}$\\
+\\[-2ex]\hline
+\end{tabular}
+\end{center}
+\caption{Monte Carlo string-resonance samples with string scale \Ms,
+minimum mass $M_\mathrm{min}$, and cross section.} 
+\label{tab1}
+\end{table}
+
+The string resonances have long Breit-Wigner tails and the lower-mass
+tail can be significantly enhanced by the PDFs at low-$x$ (low mass).
+Since we are interested in a narrow-resonance structure in the dijet
+mass distribution, we truncate the low-mass tail.
+For the $7.0 \leq \Ms \leq 8.0$~TeV samples, we truncate at the minimum in
+the differential cross section on the lower-mass side of the \Ms peak,
+which results in including slightly more than 95\% of the area under the
+curve. 
+For the $8.5 \leq \Ms \leq 9.0$~TeV samples, we truncate at a lower-mass
+value that covers 95\% of the area under the Breit-Wigner curve.
+
+Five possible $2\to 2$ subprocesses that can give rise to string
+resonances are simulated.
+The cross section for each subprocess is a function of \Ms, and thus the
+relative contribution of each subprocess to the total cross section varies
+with \Ms, as shown in Table~\ref{tab2}.
+The dominate subprocess at the \Ms values we consider is $gq\to gq$ which
+contributes about 81-87\% of the total cross section.
+Previous ATLAS and CMS searches only included the dominate subprocess.
+The $qq\to qq$, $\bar{q}\bar{q}\to \bar{q}\bar{q}$, and $q\bar{q}\to
+q\bar{q}$ subprocesses are model dependent, and not
+considered here.
+
+\begin{table}[htb]
+\begin{center}
+\begin{tabular}{crrrrr}\hline\\[-2ex]
+Subprocess             & \multicolumn{5}{c}{\Ms\ {[TeV]}}\\
+& \multicolumn{1}{c}{7.0} & \multicolumn{1}{c}{7.5} &
+\multicolumn{1}{c}{8.0} & \multicolumn{1}{c}{8.5} &
+\multicolumn{1}{c}{9.0}\\ \\[-2ex]
+\hline\\[-2ex]
+$gg\to gg$             & 11.36\% &  9.52\% &  8.17\% &  7.23\% &  5.07\%\\
+$gg\to q\bar{q}$       &  0.29\% &  0.28\% &  0.22\% &  0.19\% &  0.17\%\\
+$gq\to gq$             & 81.36\% & 83.12\% & 84.58\% & 85.54\% & 87.59\%\\
+$g\bar{q}\to g\bar{q}$ &  0.68\% &  0.58\% &  0.52\% &  0.51\% &  0.49\%\\
+$q\bar{q}\to gg$       &  6.31\% &  6.50\% &  6.51\% &  6.53\% &  6.67\%\\
+\\[-2ex] \hline
+\end{tabular}
+\end{center}
+\caption{String-resonance subprocesses and their relative contribution
+to the total cross section for different string scales \Ms.
+The statistics are based on samples of 66000 events.}
+\label{tab2}
+\end{table}
+
+For the string-resonance samples, the MC event
+generator \str~1.00~\cite{Vakilipourtakalou:2018pfo} is used.
+It is interfaced to \pythia~8.240~\cite{Sjostrand:2014zea} for modelling
+of the parton shower, hadronization, and underlying event, with
+parameters from the A14 tune~\cite{ATL-PHYS-PUB-2014-021}.
+The leading-order CTEQ6L1~\cite{Pumplin:2002vw} PDF set is used for the
+parton shower and the hard-scattering process.
+The EvtGen~1.6.0 program~\cite{Lange:2001uf} is used to decay bottom
+and charm hadrons. 
+
+The effect of multiple interactions in the same and neighbouring bunch
+crossings (pile-up) is modelled by overlaying simulated inelastic $pp$
+events generated with \pythia~8.186~\cite{Sjostrand:2014zea}
+using NNPDF2.3LO set of PDFs~\cite{Ball:2012cx} and the A3
+tune~\cite{ATL-PHYS-PUB-2016-017} over the original hard-scattering event. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\clearpage
