--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -7,5 +7,8 @@
 % MC String Samples
 \input{include/stringsamples.tex}
 
+% String Amg;es
+\input{include/stringangles.tex}
+
 % BumpHunter Algorithm
 %\input{include/bumphunter.tex}
