including cutflow appendix

--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -10,5 +10,8 @@
 % String Amg;es
 \input{include/stringangles.tex}
 
+% adding cutflow
+\input{include/cutflow.tex}
+
 % BumpHunter Algorithm
 %\input{include/bumphunter.tex}
