Updated Author contributions

--- a/ANA-EXOT-2019-32-INT1-metadata.tex
+++ b/ANA-EXOT-2019-32-INT1-metadata.tex
@@ -32,17 +32,22 @@
 \makeatother
 % \renewcommand\Authands{, } % avoid ``. and'' for last author
 % \renewcommand\Affilfont{\itshape\small} % affiliation formatting
-\AtlasAuthorContributor{Iain~Bertram}{a}{Contact, supervising Rybacki, q/g tagging optimisation of selection.}
+% Alphabetising
+
+\AtlasAuthorContributor{Iain~Bertram}{a}{Contact, supervising Rybacki, q/g tagging optimisation of selection, statistical framework.}
 \AtlasAuthorContributor{Jyoti~Biswal}{b}{BG estimation, systematics.}
-\AtlasAuthorContributor{Doug~Gingrich}{b,c}{Supervising Lyons.}
+\AtlasAuthorContributor{Changxu~Wei}{g}{ Supervising students}
 \AtlasAuthorContributor{Shih-Chieh~Hsu}{d}{Supervising students, checking analysis flow, data MC comparison.}
+\AtlasAuthorContributor{Doug~Gingrich}{b,c}{Supervising Lyons.}
+\AtlasAuthorContributor{Jack~Lindon}{b}{ Data Fitting, Statistical Studies.}
 \AtlasAuthorContributor{Fairhurst~Lyons}{b}{BG estimation, systematics.}
 \AtlasAuthorContributor{Ben~Nachman}{e}{CP uncertainties; supervising Rybacki.}
-\AtlasAuthorContributor{Nishu~Nishu}{f}{Analysis advice.}
+\AtlasAuthorContributor{Nishu~Nishu}{b}{Analysis advice.}
 \AtlasAuthorContributor{Katherine~Rybacki}{a}{q/g tagging systematics, sample production.}
+\AtlasAuthorContributor{Shu~Li}{g}{ Supervising students}
 \AtlasAuthorContributor{Wanyun~Su}{g}{Checking analysis flow, data MC comparison.}
 \AtlasAuthorContributor{Changxu~Wei}{h}{Checking analysis flow, data MC comparison.}
-\AtlasAuthorContributor{Dengfeng~Zhang}{b}{}
+\AtlasAuthorContributor{Dengfeng~Zhang}{b}{Ntuple Creation, Optimisation of Data Selection}
 \AtlasAuthorContributor{Yan~Zhou}{h}{Checking analysis flow, data MC comparison.}
 % \AtlasContributor{.}
 % \author[a]{Iain Bertram}
