updating template files

--- a/bib/ATLAS-useful.bib
+++ b/bib/ATLAS-useful.bib
@@ -60,12 +60,10 @@
 @inproceedings{Cacciari:2006sm,
       author         = "Cacciari, Matteo",
       title          = "{FastJet: A Code for fast \(k_t\) clustering, and more}",
-      booktitle      = "{Deep inelastic scattering. Proceedings, 14th
-                        International Workshop, DIS 2006, Tsukuba, Japan, April
-                        20-24, 2006}",
-      year           = "2006",
+      booktitle      = "{Proceedings, Deep inelastic scattering, 14th International Workshop, DIS 2006}",
+      venue          = "Tsukuba, Japan",
+      eventdate      = "2006-04-20/2006-04-24",
       pages          = "487-490",
-      note           = "[,125(2006)]",
       eprint         = "hep-ph/0607071",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -77,10 +75,10 @@
 @inproceedings{Boos:2001cv,
       author         = "Boos, E. and others",
       title          = "{Generic user process interface for event generators}",
-      booktitle      = "{Physics at TeV colliders. Proceedings, Euro Summer
-                        School, Les Houches, France, May 21--June 1, 2001}",
+      booktitle      = "{Proceedings, Physics at TeV colliders, Euro Summer School}",
+      venue          = "Les Houches, France",
+      eventdate      = "2001-05-21/2001-06-01",
       url            = "http://lss.fnal.gov/archive/preprint/fermilab-conf-01-496-t.shtml",
-      year           = "2001",
       eprint         = "hep-ph/0109068",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -225,13 +223,12 @@
 
 % MSTW2008
 @article{Martin:2009iq,
-      author         = "Martin, A. D. and Stirling, W. J. and Thorne, R. S. and
-                        Watt, G.",
+      author         = "Martin, A. D. and Stirling, W. J. and Thorne, R. S. and Watt, G.",
       title          = "{Parton distributions for the LHC}",
       journal        = "Eur. Phys. J. C",
       volume         = "63",
       year           = "2009",
-      pages          = "189-285",
+      pages          = "189",
       doi            = "10.1140/epjc/s10052-009-1072-5",
       eprint         = "0901.0002",
       archivePrefix  = "arXiv",
@@ -241,8 +238,7 @@
 }
 
 @article{Martin:2009bu,
-      author         = "Martin, A. D. and Stirling, W.J. and Thorne, R.S. and
-                        Watt, G.",
+      author         = "Martin, A. D. and Stirling, W. J. and Thorne, R. S. and Watt, G.",
       title          = "{Uncertainties on \(\alpha_S\) in global PDF analyses and
                         implications for predicted hadronic cross sections}",
       journal        = "Eur. Phys. J. C",
@@ -402,7 +398,7 @@
 % Pythia6
 @Article{Sjostrand:2006za,
      author    = "Sj{\"o}strand, Torbjorn and Mrenna, Stephen and Skands, Peter Z.",
-     title     = "{PYTHIA 6.4 Physics and Manual}",
+     title     = "{PYTHIA 6.4 physics and manual}",
      journal   = "JHEP",
      volume    = "05",
      year      = "2006",
@@ -625,7 +621,7 @@
 }
 
 @Article{Frixione:2008yi,
-     author    = "Frixione, Stefano and Laenen, Eric and Motylinski, Patrick and White, Chris D. and Webber, Bryan R.",
+     author    = "Frixione, Stefano and Laenen, Eric and Motylinski, Patrick and White, Chris and Webber, Bryan R.",
      title     = "{Single-top hadroproduction in association with a \(W\) boson}",
      journal   = "JHEP",
      volume    = "07",
@@ -771,7 +767,7 @@
 
 % Herwig++
 @Article{Bahr:2008pv,
-      author         = "Bahr, M. and others",
+      author         = "B{\"a}hr, M. and others",
       title          = "{Herwig++ physics and manual}",
       journal        = "Eur. Phys. J. C",
       volume         = "58",
@@ -968,7 +964,7 @@
 % ttbb Powheg-Box-Res
 @online{ttbbPowheg,
   title    = "Powheg-Box-Res ttbb source code",
-  author   = "Jezo, Tomas",
+  author   = "Ježo, Tomas",
   year     = "2019",
   url      = "https://gitlab.cern.ch/tjezo/powheg-box-res_ttbb/"
 }
@@ -1141,9 +1137,9 @@
       author         = "Kidonakis, Nikolaos",
       title          = "{Top Quark Production}",
       booktitle      = "{Proceedings, Helmholtz International Summer School on
-                        Physics of Heavy Quarks and Hadrons (HQ 2013): JINR,
-                        Dubna, Russia, July 15-28, 2013}",
-      year           = "2014",
+                        Physics of Heavy Quarks and Hadrons (HQ 2013)}",
+      eventdate      = "2013-07-15/2013-07-28",
+      venue          = "JINR, Dubna, Russia",
       pages          = "139-168",
       doi            = "10.3204/DESY-PROC-2013-03/Kidonakis",
       eprint         = "1311.0283",
@@ -1174,7 +1170,7 @@
       author         = "Anastasiou, Charalampos and Dixon, Lance J. and Melnikov,
                         Kirill and Petriello, Frank",
       title          = "{High precision QCD at hadron colliders: Electroweak
-                        gauge boson rapidity distributions at NNLO}",
+                        gauge boson rapidity distributions at next-to-next-to leading order}",
       journal        = "Phys. Rev. D",
       volume         = "69",
       year           = "2004",
@@ -1395,10 +1391,8 @@
 
 % multiweights with Sherpa
 @article{Bothmann:2016nao,
-      author         = "Bothmann, Enrico and Sch{\"o}nherr, Marek and Schumann,
-                        Steffen",
-      title          = "{Reweighting QCD matrix-element and parton-shower
-                        calculations}",
+      author         = "Bothmann, Enrico and Sch{\"o}nherr, Marek and Schumann, Steffen",
+      title          = "{Reweighting QCD matrix-element and parton-shower calculations}",
       journal        = "Eur. Phys. J. C",
       volume         = "76",
       year           = "2016",
@@ -1414,19 +1408,18 @@
 
 % Sherpa 2.2 release note
 @article{Bothmann:2019yzt,
-    author = "Bothmann, Enrico and others",
-    collaboration = "Sherpa",
-    title = "{Event Generation with Sherpa 2.2}",
-    eprint = "1905.09127",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ph",
-    reportNumber = "FERMILAB-PUB-19-218-T, SLAC-PUB-17433, IPPP/19/42, MCNET-19-11",
-    doi = "10.21468/SciPostPhys.7.3.034",
-    journal = "SciPost Phys.",
-    volume = "7",
-    number = "3",
-    pages = "034",
-    year = "2019"
+      author = "Bothmann, Enrico and others",
+      title = "{Event generation with Sherpa 2.2}",
+      journal = "SciPost Phys.",
+      volume = "7",
+      year = "2019",
+      number = "3",
+      pages = "034",
+      doi = "10.21468/SciPostPhys.7.3.034",
+      reportNumber = "FERMILAB-PUB-19-218-T, SLAC-PUB-17433, IPPP/19/42, MCNET-19-11",
+      eprint = "1905.09127",
+      archivePrefix = "arXiv",
+      primaryClass = "hep-ph",
 }
 
 % AHADIC
@@ -1578,7 +1571,7 @@
 % Collier
 @article{Denner:2016kdg,
       author         = "Denner, Ansgar and Dittmaier, Stefan and Hofer, Lars",
-      title          = "{Collier: A fortran-based complex one-loop library in
+      title          = "{\textsc{Collier}: A fortran-based complex one-loop library in
                         extended regularizations}",
       journal        = "Comput. Phys. Commun.",
       volume         = "212",
@@ -1896,8 +1889,7 @@
 @article{Actis:2008ts,
       author         = "Actis, Stefano and Passarino, Giampiero and Sturm,
                         Christian and Uccirati, Sandro",
-      title          = "{NNLO computational techniques: The cases \(H \to \gamma
-                        \gamma\) and \(H \to gg\)}",
+      title          = "{NNLO computational techniques: The cases \(H \to \gamma\gamma\) and \(H \to gg\)}",
       journal        = "Nucl. Phys. B",
       volume         = "811",
       year           = "2009",
@@ -1920,14 +1912,24 @@
       year           = "2018",
       number         = "5",
       pages          = "056017",
-      xdoi            = "10.1103/PhysRevD.97.056017, 10.1103/PhysRevD.97.099906",
       doi            = "10.1103/PhysRevD.97.056017",
-      note           = "[Erratum: Phys. Rev. D 97 (2018) 099906]",
       eprint         = "1801.10403",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "CERN-TH-2018-011, TTP18-004",
-      SLACcitation   = "%%CITATION = ARXIV:1801.10403;%%"
+      SLACcitation   = "%%CITATION = ARXIV:1801.10403;%%",
+      related = "Bonetti:2018ukf-err",
+      relatedstring  = "Erratum:",
+}
+
+@article{Bonetti:2018ukf-err,
+      journal = {Phys. Rev. D},
+      volume = {97},
+      year = {2018},
+      pages = {099906},
+      numpages = {1},
+      publisher = {American Physical Society},
+      doi = {10.1103/PhysRevD.97.099906},
 }
 
 @article{Aglietti:2004nj,
@@ -2051,8 +2053,9 @@
       author         = "Djouadi, A. and M{\"u}hlleitner, M. M. and Spira, M.",
       title          = "{Decays of supersymmetric particles: The Program SUSY-HIT
                         (SUspect-SdecaY-Hdecay-InTerface)}",
-      booktitle      = "{Physics at LHC. Proceedings, 3rd Conference, Cracow,
-                        Poland, July 3-8, 2006}",
+      booktitle      = "{Proceedings, Physics at LHC, 3rd Conference}",
+      venue          = "Cracow, Poland",
+      eventdate      = "2006-07-03/2006-07-08",
       journal        = "Acta Phys. Polon. B",
       volume         = "38",
       year           = "2007",
@@ -2065,8 +2068,7 @@
 }
 
 @article{Bredenstein:2006ha,
-      author         = "Bredenstein, A. and Denner, Ansgar and Dittmaier, S. and
-                        Weber, M. M.",
+      author         = "Bredenstein, A. and Denner, Ansgar and Dittmaier, S. and Weber, M. M.",
       title          = "{Radiative corrections to the semileptonic and hadronic
                         Higgs-boson decays \(H \to WW / ZZ \to 4\) fermions}",
       journal        = "JHEP",
@@ -2084,10 +2086,8 @@
 
 
 @article{Bredenstein:2006rh,
-      author         = "Bredenstein, A. and Denner, Ansgar and Dittmaier, S. and
-                        Weber, M. M.",
-      title          = "{Precise predictions for the Higgs-boson decay H --->
-                        WW/ZZ ---> 4 leptons}",
+      author         = "Bredenstein, A. and Denner, Ansgar and Dittmaier, S. and Weber, M. M.",
+      title          = "{Precise predictions for the Higgs-boson decay $H \to WW/ZZ \to 4$ leptons}",
       journal        = "Phys. Rev. D",
       volume         = "74",
       year           = "2006",
@@ -2101,19 +2101,17 @@
 }
 
 @article{Bredenstein:2006nk,
-      author         = "Bredenstein, A. and Denner, Ansgar and Dittmaier, S. and
-                        Weber, M. M.",
-      title          = "{Precision calculations for the Higgs decays H ---> ZZ/WW
-                        ---> 4 leptons}",
+      author         = "Bredenstein, A. and Denner, Ansgar and Dittmaier, S. and Weber, M. M.",
+      title          = "{Precision calculations for the Higgs-boson decay \(H \to ZZ/WW \to 4\) leptons}",
       booktitle      = "{Proceedings, 8th DESY Workshop on Elementary Particle
-                        Theory: Loops and Legs in Quantum Field Theory: Eisenach,
-                        Germany, 23-28 April 2006}",
+                        Theory: Loops and Legs in Quantum Field Theory}",
+      venue          = "Eisenach, Germany",
+      eventdate      = "2006-04-23/2006-04-28",
       journal        = "Nucl. Phys. Proc. Suppl.",
       volume         = "160",
       year           = "2006",
       pages          = "131-135",
       doi            = "10.1016/j.nuclphysbps.2006.09.104",
-      note           = "[,131(2006)]",
       eprint         = "hep-ph/0607060",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
