--- a/bib/ATLAS-SUSY.bib
+++ b/bib/ATLAS-SUSY.bib
@@ -104,8 +104,8 @@
 
 @article{Fayet:1976et,
       author         = "Fayet, Pierre",
-      title          = "{Supersymmetry and Weak, Electromagnetic and Strong
-                        Interactions}",
+      title          = "{Supersymmetry and weak, electromagnetic and strong
+                        interactions}",
       journal        = "Phys. Lett. B",
       volume         = "64",
       year           = "1976",
@@ -117,8 +117,8 @@
 
 @article{Fayet:1977yc,
       author         = "Fayet, Pierre",
-      title          = "{Spontaneously Broken Supersymmetric Theories of Weak,
-                        Electromagnetic and Strong Interactions}",
+      title          = "{Spontaneously broken supersymmetric theories of weak,
+                        electromagnetic and strong interactions}",
       journal        = "Phys. Lett. B",
       volume         = "69",
       year           = "1977",
@@ -219,7 +219,7 @@
 
 @article{Dine:1981gu,
       author         = "Dine, Michael and Fischler, Willy",
-      title          = "{A Phenomenological Model of Particle Physics Based on Supersymmetry}",
+      title          = "{A phenomenological model of particle physics based on supersymmetry}",
       journal        = "Phys. Lett. B",
       volume         = "110",
       year           = "1982",
@@ -231,7 +231,7 @@
 
 @article{AlvarezGaume:1981wy,
       author         = "Alvarez-Gaume, Luis and Claudson, Mark and Wise, Mark B.",
-      title          = "{Low-Energy Supersymmetry}",
+      title          = "{Low-energy supersymmetry}",
       journal        = "Nucl. Phys. B",
       volume         = "207",
       year           = "1982",
@@ -243,7 +243,7 @@
 
 @article{Nappi:1982hm,
       author         = "Nappi, Chiara R. and Ovrut, Burt A.",
-      title          = "{Supersymmetric Extension of the SU(3) x SU(2) x U(1) Model}",
+      title          = "{Supersymmetric extension of the SU(3) x SU(2) x U(1) model}",
       journal        = "Phys. Lett. B",
       volume         = "113",
       year           = "1982",
@@ -849,7 +849,7 @@
 % NLL: EWK production
 @article{Beenakker:1999xh,
       author         = "Beenakker, W. and others",
-      title          = "{The Production of Charginos/Neutralinos and Sleptons at Hadron Colliders}",
+      title          = "{Production of Charginos, Neutralinos, and Sleptons at Hadron Colliders}",
       journal        = "Phys. Rev. Lett.",
       volume         = "83",
       pages          = "3780",
@@ -890,7 +890,7 @@
 
 @article{Fuks:2013vua,
      author         = "Fuks, Benjamin and Klasen, Michael and Lamprea, David R. and Rothering, Marcel",
-     title          = "{Precision predictions for electroweak superpartner production at hadron colliders with Resummino}",
+     title          = "{Precision predictions for electroweak superpartner production at hadron colliders with \textsc{resummino}}",
      journal        = "Eur. Phys. J. C",
      volume         = "73",
      pages          = "2480",
@@ -989,19 +989,6 @@
         doi            = "10.1103/PhysRevD.78.013004",
         year           = "2008",
         eprint         = "0802.0007",
-        archivePrefix  = "arXiv",
-        primaryClass   = "hep-ph",
-}
-
-@article{Martin:2009iq,
-        author         = "Martin, A. D. and Stirling, W.J. and Thorne, R.S. and  Watt, G.",
-        title          = "{Parton distributions for the LHC}",
-        journal        = "Eur. Phys. J. C",
-        volume         = "63",
-        pages          = "189",
-        doi            = "10.1140/epjc/s10052-009-1072-5",
-        year           = "2009",
-        eprint         = "0901.0002",
         archivePrefix  = "arXiv",
         primaryClass   = "hep-ph",
 }
