--- a/bib/PubNotes.bib
+++ b/bib/PubNotes.bib
@@ -1,4 +1,4 @@
-% Created on 2020-07-15 16:12:25
+% Created on 2021-02-06 15:25:45
 % Note that this file can be overwritten when atlaslatex is updated.
 
 @Booklet{ATL-LARG-PUB-2008-002,
@@ -2518,6 +2518,86 @@
     title          = "{Deep Sets based Neural Networks for Impact Parameter Flavour Tagging in ATLAS}",
     howpublished   = "{ATL-PHYS-PUB-2020-014}",
     url            = "https://cds.cern.ch/record/2718948",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-017,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Boosted hadronic vector boson and top quark tagging with ATLAS using Run 2 data}",
+    howpublished   = "{ATL-PHYS-PUB-2020-017}",
+    url            = "https://cds.cern.ch/record/2724149",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-018,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Deep Learning for Pion Identification and Energy Calibration with the ATLAS Detector}",
+    howpublished   = "{ATL-PHYS-PUB-2020-018}",
+    url            = "https://cds.cern.ch/record/2724632",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-019,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Identification of Boosted Higgs Bosons Decaying Into \(b\bar{b}\) With Neural Networks and Variable Radius Subjets in ATLAS}",
+    howpublished   = "{ATL-PHYS-PUB-2020-019}",
+    url            = "https://cds.cern.ch/record/2724739",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-023,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Study of top-quark pair modelling and uncertainties using ATLAS measurements at \(\sqrt{s} = 13\,\text{TeV}\)}",
+    howpublished   = "{ATL-PHYS-PUB-2020-023}",
+    url            = "https://cds.cern.ch/record/2730443",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-024,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Modelling of rare top quark processes at \(\sqrt{s} = 13\,\text{TeV}\) in ATLAS}",
+    howpublished   = "{ATL-PHYS-PUB-2020-024}",
+    url            = "https://cds.cern.ch/record/2730584",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-025,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Formulae for Estimating Significance}",
+    howpublished   = "{ATL-PHYS-PUB-2020-025}",
+    url            = "https://cds.cern.ch/record/2736148",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-026,
+    author         = "{ATLAS and CMS Collaborations}",
+    title          = "{Comparison of ATLAS and CMS VBS Monte Carlo simulation}",
+    howpublished   = "{ATL-PHYS-PUB-2020-026}",
+    url            = "https://cds.cern.ch/record/2737267",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-028,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Recommendations for the Modeling of Smooth Backgrounds}",
+    howpublished   = "{ATL-PHYS-PUB-2020-028}",
+    url            = "https://cds.cern.ch/record/2743717",
+    year           = "2020",
+}
+
+@Booklet{ATL-SOFT-PUB-2020-003,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Interactive web pages for radiation environment exploration of ATLAS}",
+    howpublished   = "{ATL-SOFT-PUB-2020-003}",
+    url            = "https://cds.cern.ch/record/2742378",
+    year           = "2020",
+}
+
+@Booklet{ATL-SOFT-PUB-2020-006,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Fast simulation of the ATLAS calorimeter system with Generative Adversarial Networks}",
+    howpublished   = "{ATL-SOFT-PUB-2020-006}",
+    url            = "https://cds.cern.ch/record/2746032",
     year           = "2020",
 }
 
